# language

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code.txt  factorial.txt  fib.txt  lang.asm  language_run  logs.html  main.cpp  program.txt  quadratic.txt  test.txt  tokenizer.cpp  tokenizer.h  tree.txt  tree_ilya.txt  utils.cpp
backend/: backend.cpp  backend.h  main.cpp
backfrontend/: backfrontend.cpp  backfrontend.h  main.cpp
common/: utils.cpp  utils.h
examples/: code.txt  factorial.txt  fib.txt  program.txt  quadratic.txt  test.txt
executable_files/: backend_run  backfrontend_run  frontend_run  language_run  middleend_run
frontend/: frontend.cpp  frontend.h  main.cpp
internal/: backend_tree.txt  lang.asm  lang.disasm  standard_tree.txt  test.txt
logs/: logs.html
middleend/: main.cpp  middleend.cpp  middleend.h
tokenizer/: tokenizer.cpp  tokenizer.h
tree/: config.h  logs.cpp  logs.h  recursive_descent.cpp  recursive_descent.h  tree.cpp  tree.h  tree_graph.txt
